[package]
name = "darkowl"
version = "0.1.0"
authors = ["Thomas Constantine Moore <>"]
edition = "2018"

[dependencies]
dotenv = "0.14.1"
futures = "0.3.4"
lambda_runtime = "^0.1"
reqwest = { version = "0.9.24", default_features = false, features = [ "rustls-tls" ] }
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
sqlx = { version = "0.4.1", features = [ "runtime-async-std-rustls", "mysql" ] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
